html and images for culture page

--- a/culture.html
+++ b/culture.html
@@ -5,7 +5,7 @@
 
 		<meta charset="utf-8">
 
-		<title>The Skunk Ape Gazette</title>
+		<title>The Skunk Ape Gazette | Culture</title>
 
 		<link rel="stylesheet" href="style.css" />
 
@@ -22,7 +22,7 @@
 	</head>
 
 	<body>
-
+		<main>
 		<header>
 
 			<button class="hamburger">&#9776;</button>
@@ -63,6 +63,117 @@
 			<hr>
 		</header>
 
+		<article>
+
+			<h3><a href="#">My Name is "The 1-4 Eyesore" and I'm Qualified to Start an Advice Column.</a></h3>
+
+			<p class="article_author">By the 1-4 Eyesore</p>
+
+			<a href="#"><img src="images/i-4-eyesore.jpg" alt="an unfinished skyscraper on Interstate 4 in Orlando" title="ugly building"></a>
+
+			<p class="article_description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+			<hr class="article_divider article_divider_2">
+
+		</article>
+
+		<section>
+
+			<div id="#horoscope_container">
+
+				<h3>some text</h3>
+
+			</div>
+
+			<hr class="article_divider">
+
+			<div class="article_preview">
+
+				<figure>
+
+					<a href="#"><img class="theater" src="images/theater.jpg" alt="a white actor, who is playing Hamilton, looking at a script" title="the student playing Hamilton"></a>
+
+					<figcaption>THEATER</figcaption>
+
+				</figure>
+
+				<h4><a href="#">Rural High School's Production of<span class="hamilton">Hamilton</span> Features Entirely White Cast</a></h4>
+
+			</div>
+
+
+		</section>
+
+		<aiside>
+
+			<h3>Reviews</h3>
+
+			<div class="review_container">
+
+				<figure>
+
+					<a href="#"><img class="review_image" src="images/miami.jpg" alt="an overhead image of Miami, featuring a beach" title="yep, this is Miami"></a>
+
+					<figcaption>Television</figcaption>
+
+				</figure>
+
+				<h4><a href="#">I Couldn't Bring Myself to Watch CSI: Miami, so I Ranked All the Dumb Episode Titles Instead</a></h4>
+
+				<hr class="article_divider article_divider_2">
+
+			</div>
+
+			<div class="review_container">
+
+				<figure>
+
+					<a href="#"><img class="review_image" src="images/peanuts.jpg" alt="several peanuts on a table" title="delicious salty peanuts"></a>
+
+					<figcaption>Culinary</figcaption>
+
+				</figure>
+
+				<h4><a href="#">I Taste Tested all 857 Boiled Peanut Varieties on Highway 301 and Now I Have High Blood Pressure</a></h4>
+
+				<hr class="article_divider article_divider_2">
+
+			</div>
+
+			<div class="review_container">
+
+				<figure>
+
+					<a href="#"><img class="review_image" src="images/bathroom_stall.jpg" alt="graffiti on a bathroom stall door" title="this is art"></a>
+
+					<figcaption>Literature</figcaption>
+
+				</figure>
+
+				<h4><a href="#">Public Bathroom Stall Poems of the Month</a></h4>
+
+				<hr class="article_divider article_divider_2">
+
+			</div>
+
+			<div class="review_container">
+
+				<figure>
+
+					<a href="#"><img class="review_image" src="images/sandcastle.jpg" alt="small sandcastle decorated with white shells" title="this is not art"></a>
+
+					<figcaption>Art</figcaption>
+
+				</figure>
+
+				<h4><a href="#">Thank God for High Tide Because These Kindergarten Field Trip Sandcastles Kinda Suck</a></h4>
+
+				<hr class="article_divider article_divider_2">
+
+			</div>
+
+		</aside>
+
 		<footer>
 
 			<ul>
@@ -79,7 +190,7 @@
 
 		</footer>
 
-
+		<main>
 
 
 	<script src="js/hamburger.js"></script>
