got slider plugin working

--- a/culture.html
+++ b/culture.html
@@ -79,15 +79,28 @@
 
 		<section>
 
-			<div id="#horoscope_container">
+			<div class="callbacks_container">
+				<h3>Horoscopes, But Make it Florida</h3>
 
-				<h3>some text</h3>
-
-			</div>
-
-			<hr class="article_divider">
+	      <ul class="rslides" id="slider4">
+	        <li>
+	          <img src="images/alligator.jpg" alt="">
+	          <p class="caption">This is a caption</p>
+	        </li>
+	        <li>
+	          <img src="images/deer.jpg" alt="">
+	          <p class="caption">This is another caption</p>
+	        </li>
+	        <li>
+	          <img src="images/flag.jpg" alt="">
+	          <p class="caption">The third caption</p>
+	        </li>
+	      </ul>
+	    </div>
 
 			<div class="article_preview">
+
+				<hr class="article_divider">
 
 				<figure>
 
@@ -194,5 +207,7 @@
 
 
 	<script src="js/hamburger.js"></script>
+	<script src="js/responsiveslides.min.js"></script>
+	<script src="js/main.js"></script>
 	</body>
 </html>
