--- a/opinion.html
+++ b/opinion.html
@@ -22,7 +22,7 @@
 	</head>
 
 	<body>
-
+		<main>
 		<header>
 
 			<button class="hamburger">&#9776;</button>
@@ -63,6 +63,83 @@
 			<hr>
 		</header>
 
+		<article>
+			<h3><a href="#">Our State Symbols Are Outdated and Bad- Here Are My Proposed Changes</a></h3>
+
+			<p class="article_author">By The Florida Skunk Ape</p>
+
+			<a href="#"><img src="images/flag.jpg" alt="the state flag of Florida" title="Florida's stsate flag"></a>
+
+			<p class="article_description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+			<hr class="article_divider article_divider_2">
+		</article>
+
+		<aside>
+
+			<div class="opinion_container">
+
+				<figure>
+					<h4><a href="#">"Drain the Swamp" is Offensive to Alligators</a></h4>
+
+					<a href="#"><img class="opinion_image" src="images/alligator.jpg" alt="close up side profile of an alligator's face" title="the reptile in question"></a>
+
+					<figcaption>By an anonymous reptile</figcaption>
+
+				</figure>
+
+				<hr class="article_divider article_divider_2">
+
+			</div>
+
+			<div class="opinion_container">
+
+				<figure>
+					<h4><a href="#">Stop Being So Needy About the Vaccine Thing</a></h4>
+
+					<a href="#"><img class="opinion_image" src="images/desantis.jpg" alt="image of Florida Governor Ron DeSantis" title="Ron DeSantis, great guy"></a>
+
+					<figcaption>By Florida Governor Ron DeSantis</figcaption>
+
+				</figure>
+
+				<hr class="article_divider article_divider_2">
+
+			</div>
+
+			<div class="opinion_container">
+
+				<figure>
+					<h4><a href="#">Hey, We Noticed that Your Vegetable Garden is Looking Pretty Good!</a></h4>
+
+					<a href="#"><img class="opinion_image" src="images/deer.jpg" alt="two young white-tailed deer" title="two hungry deer"></a>
+
+					<figcaption>By your neighborhood white-tailed deer</figcaption>
+
+				</figure>
+
+				<hr class="article_divider article_divider_2">
+
+			</div>
+
+		</aside>
+
+		<section>
+
+				<h5>Explanation-Free Hot Takes from the General Public</h5>
+
+				<ul>
+					<li>Not wearing a mask at the St. Augustine Fountain of Youth Archeological Park is my Constitutional right</li>
+					<li>Key West is too gay</li>
+					<li>Key West is not gay enough</li>
+					<li>Normalize Getting Tipsy at the Jacksonville International Airport Chili's</li>
+					<li>Universal Studios taking away the Jaws ride is almost certainly correlated to state-wide increases in depression</li>
+					<li>FSU Football Sucks</li>
+					<li>UF Football Sucks</li>
+					<li>UNF Division II Men's Lacrosse Pretty Good</li>
+				</ul>
+			</section>
+
 		<footer>
 
 			<ul>
@@ -78,6 +155,7 @@
 			<p>Email the Skunk Ape: <a href="mailto:contact@skunkapegazette.com">contact@skunkapegazette.com</a></p>
 
 		</footer>
+		</main>
 
 
 
