got topbox plugin working

--- a/index.html
+++ b/index.html
@@ -144,6 +144,12 @@
 
 			<p>Email the Skunk Ape: <a href="mailto:contact@skunkapegazette.com">contact@skunkapegazette.com</a></p>
 
+			<div class="sponsor">
+
+				<a href="images/peanuts.jpg" class="button lightbox" aria-haspopup="dialog" title="a message from our sponsor, Florida Man">a message from our sponsor</a>
+
+			</div>
+
 		</footer>
 
 
@@ -152,6 +158,7 @@
 	</div>
 
 	<script src="js/hamburger.js"></script>
-
+	<script src="js/topbox.js"></script>
+	<script src="js/main.js"></script>
 	</body>
 </html>
