--- a/culture.html
+++ b/culture.html
@@ -80,21 +80,57 @@
 		<section>
 
 			<div class="callbacks_container">
-				<h3>Horoscopes, But Make it Florida</h3>
+				<h3>Possibly Accurate Horoscopes</h3>
 
 	      <ul class="rslides" id="slider4">
 	        <li>
-	          <img src="images/alligator.jpg" alt="">
-	          <p class="caption">This is a caption</p>
+	          <img src="images/hs1.png" alt="woman at a hardware store with caption You will go into credit card debt after a spending spree at Ace Hardware.">
+	          <p class="caption">Ares: March 21 – April 19</p>
 	        </li>
-	        <li>
-	          <img src="images/deer.jpg" alt="">
-	          <p class="caption">This is another caption</p>
-	        </li>
-	        <li>
-	          <img src="images/flag.jpg" alt="">
-	          <p class="caption">The third caption</p>
-	        </li>
+					<li>
+					 <img src="images/hs2.png" alt="man holding up wish with the caption You will post a photo on Tinder of you holding up a fish. It won’t work.">
+					 <p class="caption">Taurus: April 20 – May 20</p>
+				 </li>
+				 <li>
+					<img src="images/hs3.png" alt="turtle on a log with the caption You will see a turtle on a log and wonder if she has a better life than you. She does.">
+					<p class="caption">Gemini: May 21 – June 20</p>
+				</li>
+				<li>
+					<img src="images/hs4.png" alt="cup of Dippin Dots ice cream with the caption You will go to the zoo just to buy Dippin’ Dots, “The Ice Cream of the Future.” (not sponsored)">
+					<p class="caption">Cancer: June 21 – July 22</p>
+				</li>
+				<li>
+					<img src="images/hs5.png" alt="picture of a mockingbird with the caption You will be attacked by a mockingbird, but this is a regular occurrence for you.">
+					<p class="caption">Leo: July 23 – August 22</p>
+				</li>
+				<li>
+					<img src="images/hs6.png" alt="picture of a picnic basket with the caption You will plan a picnic date, it will be too hot, the sun will hurt your eyes, and your date will leave.">
+					<p class="caption">Virgo: August 23 – September 22</p>
+				</li>
+				<li>
+					<img src="images/hs7.png" alt="pic of shrimp with caption You’ll buy some roadside “fresh shrimp,” but you’re in downtown Orlando, so... good luck.">
+					<p class="caption">Libra: September 23 – October 22</p>
+				</li>
+				<li>
+					<img src="images/hs8.png" alt="pic of polluted river with caption A politician will yell at you for saying that dumping pesticides in the river is bad.">
+					<p class="caption">Scorpio: October 23 – November 21</p>
+				</li>
+				<li>
+					<img src="images/hs9.png" alt="pic of Disney castle with caption You will wait 95 minutes to ride Space Mountain and then it will shut down for six hours.">
+					<p class="caption">Sagittarius: November 22 – December 21</p>
+				</li>
+				<li>
+					<img src="images/hs10.png" alt="pic of mimosa drink with caption You will drink a mimosa at 8 am and another one at 8:15 and another one at 8:30 and so on.">
+					<p class="caption">Capricorn: December 22 – January 19</p>
+				</li>
+				<li>
+					<img src="images/hs11.png" alt="pic of couple embracing with caption You will sleep with an attractive “businessman” but he will steal your social security number.">
+					<p class="caption">Aquarius: January 20 – February 18</p>
+				</li>
+				<li>
+					<img src="images/hs12.png" alt="pic of businessman giving thumbs up with caption You will steal someone’s social security number.">
+					<p class="caption">Pisces: February 19 – March 20</p>
+				</li>
 	      </ul>
 	    </div>
 
