added content to topbox plugin

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 
 			<div class="sponsor">
 
-				<a href="images/peanuts.jpg" class="button lightbox" aria-haspopup="dialog" title="a message from our sponsor, Florida Man">a message from our sponsor</a>
+				<a href="images/florida_man.png" class="button lightbox" aria-haspopup="dialog" title="1-800-Florida-Man">a message from our sponsor</a>
 
 			</div>
 
