styled mobile opinion page

--- a/index.html
+++ b/index.html
@@ -123,9 +123,9 @@
 						<li class="other_news">MORE NEWS TO PERUSE</li>
 						<li><a href="#">International Incident: Canadian Tourist Detained After Biting Orange Like a Goddamn Apple</a></li>
 						<li><a href="#">Jacksonville Psychiatric Hospitals Overflowing with Delusional Jaguars Fans that Insist "Urban Meyer Will Change Things"</a></li>
-						<li><a href="#">Opinion: Stop Being Needy About the Vaccine Thing (By Ron DeSantis)</a></li>
-						<li><a href="#">Opinion: "Drain the Swamp" is Offensive to Alligators (By Anonymous)</a></li>
-						<li><a href="#">Large Bird Review: The Brown Pelican Kicks Ass</a></li>
+						<li><a href="#">Opinion: Stop Being Needy About Minimum Wage (By Ron DeSantis)</a></li>
+						<li><a href="#">Opinion: "Drain the Swamp" is Offensive to Alligators (By Anonymous Reptile)</a></li>
+						<li><a href="#">Public Bathroom Stalls of the Month</a></li>
 						<li class="final_li"><a href="#">You Want Horoscopes? We Have Your Precious Horoscopes</a></li>
 					</ul>
 				</section>
