--- a/opinion.html
+++ b/opinion.html
@@ -5,7 +5,7 @@
 
 		<meta charset="utf-8">
 
-		<title>The Skunk Ape Gazette</title>
+		<title>The Skunk Ape Gazette | Opinion</title>
 
 		<link rel="stylesheet" href="style.css" />
 
@@ -63,28 +63,28 @@
 			<hr>
 		</header>
 
-		<article>
+		<article class="opinion_main_story">
 			<h3><a href="#">Our State Symbols Are Outdated and Bad- Here Are My Proposed Changes</a></h3>
 
 			<p class="article_author">By The Florida Skunk Ape</p>
 
 			<a href="#"><img src="images/flag.jpg" alt="the state flag of Florida" title="Florida's stsate flag"></a>
 
-			<p class="article_description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+			<p class="article_description">Florida’s state symbols, for the most part, need updating. From the flag that depicts a supposedly “great seal,” to a state bird that is also the state bird of four other states, our symbols are simply lacking. As an expert on all things Florida, I will propose alternative and additional symbols for this beautiful state. Just don’t expect me to get rid of the designated state soil.</p>
 
 			<hr class="article_divider article_divider_2">
 		</article>
 
-		<aside>
+		<aside class="opinion_aside">
 
 			<div class="opinion_container">
 
 				<figure>
 					<h4><a href="#">"Drain the Swamp" is Offensive to Alligators</a></h4>
 
-					<a href="#"><img class="opinion_image" src="images/alligator.jpg" alt="close up side profile of an alligator's face" title="the reptile in question"></a>
+					<figcaption class="opinion_author">By an anonymous reptile</figcaption>
 
-					<figcaption>By an anonymous reptile</figcaption>
+					<a href="#"><img class="opinion_image" src="images/alligator.jpg" alt="close up side profile of an alligator's face" title="the reptile in question"></a>
 
 				</figure>
 
@@ -95,11 +95,11 @@
 			<div class="opinion_container">
 
 				<figure>
-					<h4><a href="#">Stop Being So Needy About the Vaccine Thing</a></h4>
+					<h4><a href="#">Stop Being So Needy About Minimum Wage</a></h4>
+
+					<figcaption class="opinion_author">By Florida Governor Ron DeSantis</figcaption>
 
 					<a href="#"><img class="opinion_image" src="images/desantis.jpg" alt="image of Florida Governor Ron DeSantis" title="Ron DeSantis, great guy"></a>
-
-					<figcaption>By Florida Governor Ron DeSantis</figcaption>
 
 				</figure>
 
@@ -112,9 +112,9 @@
 				<figure>
 					<h4><a href="#">Hey, We Noticed that Your Vegetable Garden is Looking Pretty Good!</a></h4>
 
-					<a href="#"><img class="opinion_image" src="images/deer.jpg" alt="two young white-tailed deer" title="two hungry deer"></a>
+					<figcaption class="opinion_author">By your neighborhood white-tailed deer</figcaption>
 
-					<figcaption>By your neighborhood white-tailed deer</figcaption>
+					<a href="#"><img class="opinion_image" src="images/deer.jpg" alt="two young white-tailed deer" title="two hungry deer"></a>
 
 				</figure>
 
@@ -124,7 +124,7 @@
 
 		</aside>
 
-		<section>
+		<section class="opinion_section">
 
 				<h5>Explanation-Free Hot Takes from the General Public</h5>
 
@@ -133,11 +133,21 @@
 					<li>Key West is too gay</li>
 					<li>Key West is not gay enough</li>
 					<li>Normalize Getting Tipsy at the Jacksonville International Airport Chili's</li>
+					<li>It is too hot</li>
 					<li>Universal Studios taking away the Jaws ride is almost certainly correlated to state-wide increases in depression</li>
 					<li>FSU Football Sucks</li>
 					<li>UF Football Sucks</li>
-					<li>UNF Division II Men's Lacrosse Pretty Good</li>
+					<li>UNF Division II Men's Lacrosse is pretty good</li>
+					<li>It is very hot</li>
+					<li>Publix founder George W. Jenkins could shoot a guy on Blaning Boulevard and I'd still buy his chicken tender subs</li>
+					<li>Cancel anyone and everyone who picks up live sand dollars at the beach</li>
+					<li>It is unbearably hot</li>
+					<li>The housing market is dog****. That isn't an opinion. Don't put it in the opinion section. Are you listening?</li>
+					<li>It is hot</li>
 				</ul>
+
+				<hr class="article_divider article_divider_2 opinion_article_divider">
+
 			</section>
 
 		<footer>
