styled culture and opinion pages up to 600px

--- a/culture.html
+++ b/culture.html
@@ -63,21 +63,21 @@
 			<hr>
 		</header>
 
-		<article>
+		<article class="culture_main_story">
 
 			<h3><a href="#">My Name is "The 1-4 Eyesore" and I'm Qualified to Start an Advice Column.</a></h3>
 
-			<p class="article_author">By the 1-4 Eyesore</p>
+			<p class="article_author">By the Unfinished Orlando Majesty Building</p>
 
 			<a href="#"><img src="images/i-4-eyesore.jpg" alt="an unfinished skyscraper on Interstate 4 in Orlando" title="ugly building"></a>
 
-			<p class="article_description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+			<p class="article_description">Some people think you have to be successful in order to write a good advice column. Those people are wrong. It doesn’t matter if you’re a 20-year-old unfinished building that everyone calls ugly- all you have to do is believe in yourself, find someone who with fingers that will type for you, and read a lot of self-help Instagram posts. Everyone needs advice from time to time. Why not submit a question today?</p>
 
 			<hr class="article_divider article_divider_2">
 
 		</article>
 
-		<section>
+		<section class="culture_section">
 
 			<div class="callbacks_container">
 				<h3>Possibly Accurate Horoscopes</h3>
@@ -146,14 +146,16 @@
 
 				</figure>
 
-				<h4><a href="#">Rural High School's Production of<span class="hamilton">Hamilton</span> Features Entirely White Cast</a></h4>
+				<h4><a href="#">Rural High School's Production of Hamilton Features Entirely White Cast</a></h4>
+
+				<hr class="article_divider article_divider_2">
 
 			</div>
 
 
 		</section>
 
-		<aiside>
+		<aside class="culture_aside">
 
 			<h3>Reviews</h3>
 
@@ -163,7 +165,7 @@
 
 					<a href="#"><img class="review_image" src="images/miami.jpg" alt="an overhead image of Miami, featuring a beach" title="yep, this is Miami"></a>
 
-					<figcaption>Television</figcaption>
+					<figcaption>TELEVISION</figcaption>
 
 				</figure>
 
@@ -179,7 +181,7 @@
 
 					<a href="#"><img class="review_image" src="images/peanuts.jpg" alt="several peanuts on a table" title="delicious salty peanuts"></a>
 
-					<figcaption>Culinary</figcaption>
+					<figcaption>CULINARY</figcaption>
 
 				</figure>
 
@@ -195,7 +197,7 @@
 
 					<a href="#"><img class="review_image" src="images/bathroom_stall.jpg" alt="graffiti on a bathroom stall door" title="this is art"></a>
 
-					<figcaption>Literature</figcaption>
+					<figcaption>LITERATURE</figcaption>
 
 				</figure>
 
@@ -211,7 +213,7 @@
 
 					<a href="#"><img class="review_image" src="images/sandcastle.jpg" alt="small sandcastle decorated with white shells" title="this is not art"></a>
 
-					<figcaption>Art</figcaption>
+					<figcaption>ART</figcaption>
 
 				</figure>
 
