styled culture and opinion pages up to 900px

--- a/opinion.html
+++ b/opinion.html
@@ -22,8 +22,8 @@
 	</head>
 
 	<body>
-		<main>
-		<header>
+		<main class="opinion_flexbox">
+		<header class="opinion_header">
 
 			<button class="hamburger">&#9776;</button>
 			<button class="cross">&#735;</button>
@@ -118,7 +118,7 @@
 
 				</figure>
 
-				<hr class="article_divider article_divider_2">
+				<hr class="article_divider article_divider_2 deer_hr">
 
 			</div>
 
@@ -150,15 +150,15 @@
 
 			</section>
 
-		<footer>
+		<footer class="opinion_footer">
+
+			<hr>
 
 			<ul>
 				<li><a href="#"><img src="images/facebook_logo.png" alt="Facebook logo" title="Facebook logo"></a></li>
 				<li><a href="#"><img src="images/twitter_logo.png" alt="Twitter logo" title="Twitter logo"></a></li>
 				<li><a href="#"><img src="images/instagran_logo.png" alt="Instagram logo" title="Instagram logo"></a></li>
 			</ul>
-
-			<hr>
 
 			<p>The Skunk Ape Gazette is a work of <span class="amateur">amateur</span> satire created by Ezra Stanley</p>
 
