coded opinion to max width, working on culture

--- a/culture.html
+++ b/culture.html
@@ -22,231 +22,232 @@
 	</head>
 
 	<body>
-		<main class="culture_flexbox">
-		<header class="culture_header">
+		<div class="vertical_align">
+			<main class="culture_flexbox">
+			<header class="culture_header">
 
-			<button class="hamburger">&#9776;</button>
-			<button class="cross">&#735;</button>
+				<button class="hamburger">&#9776;</button>
+				<button class="cross">&#735;</button>
 
-			<a href="#"><img class="envelop" src="images/envelope-09.png" alt="Envelope that can be clicked to email us" title="contact us"></a>
+				<a href="#"><img class="envelop" src="images/envelope-09.png" alt="Envelope that can be clicked to email us" title="contact us"></a>
 
-			<ul class="desktop-sm">
-				<li><a href="#"><img src="images/facebook_logo.png" alt="Facebook logo" title="Facebook logo"></a></li>
-				<li><a href="#"><img src="images/twitter_logo.png" alt="Twitter logo" title="Twitter logo"></a></li>
-				<li><a href="#"><img src="images/instagran_logo.png" alt="Instagram logo" title="Instagram logo"></a></li>
-			</ul>
-
-			<h1>The Skunk Ape Gazette</h1>
-
-			<h2>Florida News Beyond Reality</h2>
-
-			<nav class="menu">
-				<ul>
-					<li><a href="index.html">HOME</a></li>
-					<li><a href="localnews.html">LOCAL NEWS</a></li>
-					<li><a href="opinion.html">OPINION</a></li>
-					<li><a href="culture.html">CULTURE</a></li>
-					<li><a href="#">ABOUT</a></li>
+				<ul class="desktop-sm">
+					<li><a href="#"><img src="images/facebook_logo.png" alt="Facebook logo" title="Facebook logo"></a></li>
+					<li><a href="#"><img src="images/twitter_logo.png" alt="Twitter logo" title="Twitter logo"></a></li>
+					<li><a href="#"><img src="images/instagran_logo.png" alt="Instagram logo" title="Instagram logo"></a></li>
 				</ul>
-			</nav>
 
-			<nav>
-				<ul class="desktop-menu">
-					<li><a href="index.html">HOME</a></li>
-					<li><a href="localnews.html">LOCAL NEWS</a></li>
-					<li><a href="opinion.html">OPINION</a></li>
-					<li><a href="culture.html">CULTURE</a></li>
-					<li><a href="#">ABOUT</a></li>
-				</ul>
-			</nav>
+				<h1>The Skunk Ape Gazette</h1>
 
-			<hr>
-		</header>
+				<h2>Florida News Beyond Reality</h2>
 
-		<div class="culture_container">
+				<nav class="menu">
+					<ul>
+						<li><a href="index.html">HOME</a></li>
+						<li><a href="localnews.html">LOCAL NEWS</a></li>
+						<li><a href="opinion.html">OPINION</a></li>
+						<li><a href="culture.html">CULTURE</a></li>
+						<li><a href="#">ABOUT</a></li>
+					</ul>
+				</nav>
 
-			<article class="culture_main_story">
+				<nav>
+					<ul class="desktop-menu">
+						<li><a href="index.html">HOME</a></li>
+						<li><a href="localnews.html">LOCAL NEWS</a></li>
+						<li><a href="opinion.html">OPINION</a></li>
+						<li><a href="culture.html">CULTURE</a></li>
+						<li><a href="#">ABOUT</a></li>
+					</ul>
+				</nav>
 
-				<h3><a href="#">My Name is "The 1-4 Eyesore" and I'm Qualified to Start an Advice Column</a></h3>
+				<hr>
+			</header>
 
-				<p class="article_author">By the Unfinished Orlando Majesty Building</p>
+			<div class="culture_container">
 
-				<a href="#"><img src="images/i-4-eyesore.jpg" alt="an unfinished skyscraper on Interstate 4 in Orlando" title="ugly building"></a>
+				<article class="culture_main_story">
 
-				<p class="article_description">Some people think you have to be successful in order to write a good advice column. Those people are wrong. It doesn’t matter if you’re a 20-year-old unfinished building that everyone calls ugly- all you have to do is believe in yourself, find someone who with fingers that will type for you, and read a lot of self-help Instagram posts. Everyone needs advice from time to time. Why not submit a question today?</p>
+					<h3><a href="#">My Name is "The 1-4 Eyesore" and I'm Qualified to Start an Advice Column</a></h3>
 
-				<hr class="article_divider article_divider_2">
+					<p class="article_author">By the Unfinished Orlando Majesty Building</p>
 
-			</article>
+					<a href="#"><img src="images/i-4-eyesore.jpg" alt="an unfinished skyscraper on Interstate 4 in Orlando" title="ugly building"></a>
 
-			<section class="culture_section">
+					<p class="article_description">Some people think you have to be successful in order to write a good advice column. Those people are wrong. It doesn’t matter if you’re a 20-year-old unfinished building that everyone calls ugly- all you have to do is believe in yourself, find someone who with fingers that will type for you, and read a lot of self-help Instagram posts. Everyone needs advice from time to time. Why not submit a question today?</p>
 
-				<div class="callbacks_container">
-					<h3>Possibly Accurate Horoscopes</h3>
+					<hr class="article_divider article_divider_2">
 
-		      <ul class="rslides" id="slider4">
-		        <li>
-		          <img src="images/hs1.png" alt="woman at a hardware store with caption You will go into credit card debt after a spending spree at Ace Hardware.">
-		          <p class="caption">Ares: March 21 – April 19</p>
-		        </li>
+				</article>
+
+				<section class="culture_section">
+
+					<div class="callbacks_container">
+						<h3>Possibly Accurate Horoscopes</h3>
+
+			      <ul class="rslides" id="slider4">
+			        <li>
+			          <img src="images/hs1.png" alt="woman at a hardware store with caption You will go into credit card debt after a spending spree at Ace Hardware.">
+			          <p class="caption">Ares: March 21 – April 19</p>
+			        </li>
+							<li>
+							 <img src="images/hs2.png" alt="man holding up wish with the caption You will post a photo on Tinder of you holding up a fish. It won’t work.">
+							 <p class="caption">Taurus: April 20 – May 20</p>
+						 </li>
+						 <li>
+							<img src="images/hs3.png" alt="turtle on a log with the caption You will see a turtle on a log and wonder if she has a better life than you. She does.">
+							<p class="caption">Gemini: May 21 – June 20</p>
+						</li>
 						<li>
-						 <img src="images/hs2.png" alt="man holding up wish with the caption You will post a photo on Tinder of you holding up a fish. It won’t work.">
-						 <p class="caption">Taurus: April 20 – May 20</p>
-					 </li>
-					 <li>
-						<img src="images/hs3.png" alt="turtle on a log with the caption You will see a turtle on a log and wonder if she has a better life than you. She does.">
-						<p class="caption">Gemini: May 21 – June 20</p>
-					</li>
-					<li>
-						<img src="images/hs4.png" alt="cup of Dippin Dots ice cream with the caption You will go to the zoo just to buy Dippin’ Dots, “The Ice Cream of the Future.” (not sponsored)">
-						<p class="caption">Cancer: June 21 – July 22</p>
-					</li>
-					<li>
-						<img src="images/hs5.png" alt="picture of a mockingbird with the caption You will be attacked by a mockingbird, but this is a regular occurrence for you.">
-						<p class="caption">Leo: July 23 – August 22</p>
-					</li>
-					<li>
-						<img src="images/hs6.png" alt="picture of a picnic basket with the caption You will plan a picnic date, it will be too hot, the sun will hurt your eyes, and your date will leave.">
-						<p class="caption">Virgo: August 23 – September 22</p>
-					</li>
-					<li>
-						<img src="images/hs7.png" alt="pic of shrimp with caption You’ll buy some roadside “fresh shrimp,” but you’re in downtown Orlando, so... good luck.">
-						<p class="caption">Libra: September 23 – October 22</p>
-					</li>
-					<li>
-						<img src="images/hs8.png" alt="pic of polluted river with caption A politician will yell at you for saying that dumping pesticides in the river is bad.">
-						<p class="caption">Scorpio: October 23 – November 21</p>
-					</li>
-					<li>
-						<img src="images/hs9.png" alt="pic of Disney castle with caption You will wait 95 minutes to ride Space Mountain and then it will shut down for six hours.">
-						<p class="caption">Sagittarius: November 22 – December 21</p>
-					</li>
-					<li>
-						<img src="images/hs10.png" alt="pic of mimosa drink with caption You will drink a mimosa at 8 am and another one at 8:15 and another one at 8:30 and so on.">
-						<p class="caption">Capricorn: December 22 – January 19</p>
-					</li>
-					<li>
-						<img src="images/hs11.png" alt="pic of couple embracing with caption You will sleep with an attractive “businessman” but he will steal your social security number.">
-						<p class="caption">Aquarius: January 20 – February 18</p>
-					</li>
-					<li>
-						<img src="images/hs12.png" alt="pic of businessman giving thumbs up with caption You will steal someone’s social security number.">
-						<p class="caption">Pisces: February 19 – March 20</p>
-					</li>
-		      </ul>
-		    </div>
+							<img src="images/hs4.png" alt="cup of Dippin Dots ice cream with the caption You will go to the zoo just to buy Dippin’ Dots, “The Ice Cream of the Future.” (not sponsored)">
+							<p class="caption">Cancer: June 21 – July 22</p>
+						</li>
+						<li>
+							<img src="images/hs5.png" alt="picture of a mockingbird with the caption You will be attacked by a mockingbird, but this is a regular occurrence for you.">
+							<p class="caption">Leo: July 23 – August 22</p>
+						</li>
+						<li>
+							<img src="images/hs6.png" alt="picture of a picnic basket with the caption You will plan a picnic date, it will be too hot, the sun will hurt your eyes, and your date will leave.">
+							<p class="caption">Virgo: August 23 – September 22</p>
+						</li>
+						<li>
+							<img src="images/hs7.png" alt="pic of shrimp with caption You’ll buy some roadside “fresh shrimp,” but you’re in downtown Orlando, so... good luck.">
+							<p class="caption">Libra: September 23 – October 22</p>
+						</li>
+						<li>
+							<img src="images/hs8.png" alt="pic of polluted river with caption A politician will yell at you for saying that dumping pesticides in the river is bad.">
+							<p class="caption">Scorpio: October 23 – November 21</p>
+						</li>
+						<li>
+							<img src="images/hs9.png" alt="pic of Disney castle with caption You will wait 95 minutes to ride Space Mountain and then it will shut down for six hours.">
+							<p class="caption">Sagittarius: November 22 – December 21</p>
+						</li>
+						<li>
+							<img src="images/hs10.png" alt="pic of mimosa drink with caption You will drink a mimosa at 8 am and another one at 8:15 and another one at 8:30 and so on.">
+							<p class="caption">Capricorn: December 22 – January 19</p>
+						</li>
+						<li>
+							<img src="images/hs11.png" alt="pic of couple embracing with caption You will sleep with an attractive “businessman” but he will steal your social security number.">
+							<p class="caption">Aquarius: January 20 – February 18</p>
+						</li>
+						<li>
+							<img src="images/hs12.png" alt="pic of businessman giving thumbs up with caption You will steal someone’s social security number.">
+							<p class="caption">Pisces: February 19 – March 20</p>
+						</li>
+			      </ul>
+			    </div>
 
-				<div class="article_preview theater">
+					<div class="article_preview theater">
 
-					<hr class="article_divider">
+						<hr class="article_divider">
+
+						<figure>
+
+							<a href="#"><img class="theater" src="images/theater.jpg" alt="a white actor, who is playing Hamilton, looking at a script" title="the student playing Hamilton"></a>
+
+							<figcaption>THEATER</figcaption>
+
+						</figure>
+
+						<h4><a href="#">Rural High School's Production of Hamilton Features Entirely White Cast</a></h4>
+
+						<hr class="article_divider article_divider_2">
+
+					</div>
+
+				</section>
+
+			</div>
+
+			<aside class="culture_aside">
+
+				<h3>Reviews</h3>
+
+				<div class="review_container">
 
 					<figure>
 
-						<a href="#"><img class="theater" src="images/theater.jpg" alt="a white actor, who is playing Hamilton, looking at a script" title="the student playing Hamilton"></a>
+						<a href="#"><img class="review_image" src="images/miami.jpg" alt="an overhead image of Miami, featuring a beach" title="yep, this is Miami"></a>
 
-						<figcaption>THEATER</figcaption>
+						<figcaption>TELEVISION</figcaption>
 
 					</figure>
 
-					<h4><a href="#">Rural High School's Production of Hamilton Features Entirely White Cast</a></h4>
+					<h4><a href="#">I Couldn't Bring Myself to Watch CSI: Miami, so I Ranked All the Dumb Episode Titles Instead</a></h4>
 
 					<hr class="article_divider article_divider_2">
 
 				</div>
 
-			</section>
+				<div class="review_container">
 
+					<figure>
+
+						<a href="#"><img class="review_image" src="images/peanuts.jpg" alt="several peanuts on a table" title="delicious salty peanuts"></a>
+
+						<figcaption>CULINARY</figcaption>
+
+					</figure>
+
+					<h4><a href="#">I Taste Tested all 857 Boiled Peanut Varieties on Highway 301 and Now I Have High Blood Pressure</a></h4>
+
+					<hr class="article_divider article_divider_2">
+
+				</div>
+
+				<div class="review_container">
+
+					<figure>
+
+						<a href="#"><img class="review_image" src="images/bathroom_stall.jpg" alt="graffiti on a bathroom stall door" title="this is art"></a>
+
+						<figcaption>LITERATURE</figcaption>
+
+					</figure>
+
+					<h4><a href="#">Public Bathroom Stall Poems of the Month</a></h4>
+
+					<hr class="article_divider article_divider_2">
+
+				</div>
+
+				<div class="review_container">
+
+					<figure>
+
+						<a href="#"><img class="review_image" src="images/sandcastle.jpg" alt="small sandcastle decorated with white shells" title="this is not art"></a>
+
+						<figcaption>ART</figcaption>
+
+					</figure>
+
+					<h4><a href="#">Thank God for High Tide Because These Kindergarten Field Trip Sandcastles Kinda Suck</a></h4>
+
+					<hr class="article_divider article_divider_2 review_bottom_hr">
+
+				</div>
+
+			</aside>
+
+			<footer class="culture_footer">
+
+				<hr>
+
+				<ul>
+					<li><a href="#"><img src="images/facebook_logo.png" alt="Facebook logo" title="Facebook logo"></a></li>
+					<li><a href="#"><img src="images/twitter_logo.png" alt="Twitter logo" title="Twitter logo"></a></li>
+					<li><a href="#"><img src="images/instagran_logo.png" alt="Instagram logo" title="Instagram logo"></a></li>
+				</ul>
+
+
+				<p>The Skunk Ape Gazette is a work of <span class="amateur">amateur</span> satire created by Ezra Stanley</p>
+
+				<p>Email the Skunk Ape: <a href="mailto:contact@skunkapegazette.com">contact@skunkapegazette.com</a></p>
+
+			</footer>
+
+			<main>
 		</div>
-
-		<aside class="culture_aside">
-
-			<h3>Reviews</h3>
-
-			<div class="review_container">
-
-				<figure>
-
-					<a href="#"><img class="review_image" src="images/miami.jpg" alt="an overhead image of Miami, featuring a beach" title="yep, this is Miami"></a>
-
-					<figcaption>TELEVISION</figcaption>
-
-				</figure>
-
-				<h4><a href="#">I Couldn't Bring Myself to Watch CSI: Miami, so I Ranked All the Dumb Episode Titles Instead</a></h4>
-
-				<hr class="article_divider article_divider_2">
-
-			</div>
-
-			<div class="review_container">
-
-				<figure>
-
-					<a href="#"><img class="review_image" src="images/peanuts.jpg" alt="several peanuts on a table" title="delicious salty peanuts"></a>
-
-					<figcaption>CULINARY</figcaption>
-
-				</figure>
-
-				<h4><a href="#">I Taste Tested all 857 Boiled Peanut Varieties on Highway 301 and Now I Have High Blood Pressure</a></h4>
-
-				<hr class="article_divider article_divider_2">
-
-			</div>
-
-			<div class="review_container">
-
-				<figure>
-
-					<a href="#"><img class="review_image" src="images/bathroom_stall.jpg" alt="graffiti on a bathroom stall door" title="this is art"></a>
-
-					<figcaption>LITERATURE</figcaption>
-
-				</figure>
-
-				<h4><a href="#">Public Bathroom Stall Poems of the Month</a></h4>
-
-				<hr class="article_divider article_divider_2">
-
-			</div>
-
-			<div class="review_container">
-
-				<figure>
-
-					<a href="#"><img class="review_image" src="images/sandcastle.jpg" alt="small sandcastle decorated with white shells" title="this is not art"></a>
-
-					<figcaption>ART</figcaption>
-
-				</figure>
-
-				<h4><a href="#">Thank God for High Tide Because These Kindergarten Field Trip Sandcastles Kinda Suck</a></h4>
-
-				<hr class="article_divider article_divider_2 review_bottom_hr">
-
-			</div>
-
-		</aside>
-
-		<footer class="culture_footer">
-
-			<hr>
-
-			<ul>
-				<li><a href="#"><img src="images/facebook_logo.png" alt="Facebook logo" title="Facebook logo"></a></li>
-				<li><a href="#"><img src="images/twitter_logo.png" alt="Twitter logo" title="Twitter logo"></a></li>
-				<li><a href="#"><img src="images/instagran_logo.png" alt="Instagram logo" title="Instagram logo"></a></li>
-			</ul>
-
-
-			<p>The Skunk Ape Gazette is a work of <span class="amateur">amateur</span> satire created by Ezra Stanley</p>
-
-			<p>Email the Skunk Ape: <a href="mailto:contact@skunkapegazette.com">contact@skunkapegazette.com</a></p>
-
-		</footer>
-
-		<main>
-
 
 	<script src="js/hamburger.js"></script>
 	<script src="js/responsiveslides.min.js"></script>
