--- a/opinion.html
+++ b/opinion.html
@@ -107,7 +107,7 @@
 
 			</div>
 
-			<div class="opinion_container">
+			<div class="opinion_container deer_container">
 
 				<figure>
 					<h4><a href="#">Hey, We Noticed that Your Vegetable Garden is Looking Pretty Good!</a></h4>
