--- a/opinion.html
+++ b/opinion.html
@@ -22,153 +22,154 @@
 	</head>
 
 	<body>
-		<main class="opinion_flexbox">
-		<header class="opinion_header">
+		<div class="opinion_vertical_align">
 
-			<button class="hamburger">&#9776;</button>
-			<button class="cross">&#735;</button>
+			<main class="opinion_flexbox">
+			<header class="opinion_header">
 
-			<a href="#"><img class="envelop" src="images/envelope-09.png" alt="Envelope that can be clicked to email us" title="contact us"></a>
+				<button class="hamburger">&#9776;</button>
+				<button class="cross">&#735;</button>
 
-			<ul class="desktop-sm">
-				<li><a href="#"><img src="images/facebook_logo.png" alt="Facebook logo" title="Facebook logo"></a></li>
-				<li><a href="#"><img src="images/twitter_logo.png" alt="Twitter logo" title="Twitter logo"></a></li>
-				<li><a href="#"><img src="images/instagran_logo.png" alt="Instagram logo" title="Instagram logo"></a></li>
-			</ul>
+				<a href="#"><img class="envelop" src="images/envelope-09.png" alt="Envelope that can be clicked to email us" title="contact us"></a>
 
-			<h1>The Skunk Ape Gazette</h1>
+				<ul class="desktop-sm">
+					<li><a href="#"><img src="images/facebook_logo.png" alt="Facebook logo" title="Facebook logo"></a></li>
+					<li><a href="#"><img src="images/twitter_logo.png" alt="Twitter logo" title="Twitter logo"></a></li>
+					<li><a href="#"><img src="images/instagran_logo.png" alt="Instagram logo" title="Instagram logo"></a></li>
+				</ul>
 
-			<h2>Florida News Beyond Reality</h2>
+				<h1>The Skunk Ape Gazette</h1>
 
-			<nav class="menu">
+				<h2>Florida News Beyond Reality</h2>
+
+				<nav class="menu">
+					<ul>
+						<li><a href="index.html">HOME</a></li>
+						<li><a href="localnews.html">LOCAL NEWS</a></li>
+						<li><a href="opinion.html">OPINION</a></li>
+						<li><a href="culture.html">CULTURE</a></li>
+						<li><a href="#">ABOUT</a></li>
+					</ul>
+				</nav>
+
+				<nav>
+					<ul class="desktop-menu">
+						<li><a href="index.html">HOME</a></li>
+						<li><a href="localnews.html">LOCAL NEWS</a></li>
+						<li><a href="opinion.html">OPINION</a></li>
+						<li><a href="culture.html">CULTURE</a></li>
+						<li><a href="#">ABOUT</a></li>
+					</ul>
+				</nav>
+
+				<hr>
+			</header>
+
+				<article class="opinion_main_story">
+
+					<h3><a href="#">Our State Symbols Are Outdated and Bad- Here Are My Proposed Changes</a></h3>
+
+					<p class="article_author">By The Florida Skunk Ape</p>
+
+					<a href="#"><img src="images/flag.jpg" alt="the state flag of Florida" title="Florida's stsate flag"></a>
+
+					<p class="article_description">Florida’s state symbols, for the most part, need updating. From the flag that depicts a supposedly “great seal,” to a state bird that is also the state bird of four other states, our symbols are simply lacking. As an expert on all things Florida, I will propose alternative and additional symbols for this beautiful state. Just don’t expect me to get rid of the designated state soil.</p>
+
+					<hr class="article_divider article_divider_2">
+				</article>
+
+				<aside class="opinion_aside">
+
+					<div class="opinion_container">
+
+						<figure>
+							<h4><a href="#">"Drain the Swamp" is Offensive to Alligators</a></h4>
+
+							<figcaption class="opinion_author">By an anonymous reptile</figcaption>
+
+							<a href="#"><img class="opinion_image" src="images/alligator.jpg" alt="close up side profile of an alligator's face" title="the reptile in question"></a>
+
+						</figure>
+
+						<hr class="article_divider article_divider_2">
+
+					</div>
+
+					<div class="opinion_container">
+
+						<figure>
+							<h4><a href="#">Stop Being So Needy About Minimum Wage</a></h4>
+
+							<figcaption class="opinion_author">By Florida Governor Ron DeSantis</figcaption>
+
+							<a href="#"><img class="opinion_image" src="images/desantis.jpg" alt="image of Florida Governor Ron DeSantis" title="Ron DeSantis, great guy"></a>
+
+						</figure>
+
+						<hr class="article_divider article_divider_2">
+
+					</div>
+
+					<div class="opinion_container deer_container">
+
+						<figure>
+							<h4><a href="#">Hey, We Noticed that Your Vegetable Garden is Looking Pretty Good!</a></h4>
+
+							<figcaption class="opinion_author">By your neighborhood white-tailed deer</figcaption>
+
+							<a href="#"><img class="opinion_image" src="images/deer.jpg" alt="two young white-tailed deer" title="two hungry deer"></a>
+
+						</figure>
+
+						<hr class="article_divider article_divider_2 deer_hr">
+
+					</div>
+
+				</aside>
+
+			<section class="opinion_section">
+
+					<h5>Explanation-Free Hot Takes from the General Public</h5>
+
+					<ul>
+						<li>Not wearing a mask at the St. Augustine Fountain of Youth Archeological Park is my Constitutional right</li>
+						<li>Key West is too gay</li>
+						<li>Key West is not gay enough</li>
+						<li>Normalize Getting Tipsy at the Jacksonville International Airport Chili's</li>
+						<li>It is too hot</li>
+						<li>Universal Studios taking away the Jaws ride is almost certainly correlated to state-wide increases in depression</li>
+						<li>FSU Football Sucks</li>
+						<li>UF Football Sucks</li>
+						<li>UNF Division II Men's Lacrosse is pretty good</li>
+						<li>It is very hot</li>
+						<li>Publix founder George W. Jenkins could shoot a guy on Blaning Boulevard and I'd still buy his chicken tender subs</li>
+						<li>Cancel anyone and everyone who picks up live sand dollars at the beach</li>
+						<li>It is unbearably hot</li>
+						<li>The housing market is dog****. That isn't an opinion. Don't put it in the opinion section. Are you listening?</li>
+						<li>It is hot</li>
+					</ul>
+
+					<hr class="article_divider article_divider_2 opinion_article_divider">
+
+				</section>
+
+			<footer class="opinion_footer">
+
+				<hr>
+
 				<ul>
-					<li><a href="index.html">HOME</a></li>
-					<li><a href="localnews.html">LOCAL NEWS</a></li>
-					<li><a href="opinion.html">OPINION</a></li>
-					<li><a href="culture.html">CULTURE</a></li>
-					<li><a href="#">ABOUT</a></li>
-				</ul>
-			</nav>
-
-			<nav>
-				<ul class="desktop-menu">
-					<li><a href="index.html">HOME</a></li>
-					<li><a href="localnews.html">LOCAL NEWS</a></li>
-					<li><a href="opinion.html">OPINION</a></li>
-					<li><a href="culture.html">CULTURE</a></li>
-					<li><a href="#">ABOUT</a></li>
-				</ul>
-			</nav>
-
-			<hr>
-		</header>
-
-		<article class="opinion_main_story">
-			<h3><a href="#">Our State Symbols Are Outdated and Bad- Here Are My Proposed Changes</a></h3>
-
-			<p class="article_author">By The Florida Skunk Ape</p>
-
-			<a href="#"><img src="images/flag.jpg" alt="the state flag of Florida" title="Florida's stsate flag"></a>
-
-			<p class="article_description">Florida’s state symbols, for the most part, need updating. From the flag that depicts a supposedly “great seal,” to a state bird that is also the state bird of four other states, our symbols are simply lacking. As an expert on all things Florida, I will propose alternative and additional symbols for this beautiful state. Just don’t expect me to get rid of the designated state soil.</p>
-
-			<hr class="article_divider article_divider_2">
-		</article>
-
-		<aside class="opinion_aside">
-
-			<div class="opinion_container">
-
-				<figure>
-					<h4><a href="#">"Drain the Swamp" is Offensive to Alligators</a></h4>
-
-					<figcaption class="opinion_author">By an anonymous reptile</figcaption>
-
-					<a href="#"><img class="opinion_image" src="images/alligator.jpg" alt="close up side profile of an alligator's face" title="the reptile in question"></a>
-
-				</figure>
-
-				<hr class="article_divider article_divider_2">
-
-			</div>
-
-			<div class="opinion_container">
-
-				<figure>
-					<h4><a href="#">Stop Being So Needy About Minimum Wage</a></h4>
-
-					<figcaption class="opinion_author">By Florida Governor Ron DeSantis</figcaption>
-
-					<a href="#"><img class="opinion_image" src="images/desantis.jpg" alt="image of Florida Governor Ron DeSantis" title="Ron DeSantis, great guy"></a>
-
-				</figure>
-
-				<hr class="article_divider article_divider_2">
-
-			</div>
-
-			<div class="opinion_container deer_container">
-
-				<figure>
-					<h4><a href="#">Hey, We Noticed that Your Vegetable Garden is Looking Pretty Good!</a></h4>
-
-					<figcaption class="opinion_author">By your neighborhood white-tailed deer</figcaption>
-
-					<a href="#"><img class="opinion_image" src="images/deer.jpg" alt="two young white-tailed deer" title="two hungry deer"></a>
-
-				</figure>
-
-				<hr class="article_divider article_divider_2 deer_hr">
-
-			</div>
-
-		</aside>
-
-		<section class="opinion_section">
-
-				<h5>Explanation-Free Hot Takes from the General Public</h5>
-
-				<ul>
-					<li>Not wearing a mask at the St. Augustine Fountain of Youth Archeological Park is my Constitutional right</li>
-					<li>Key West is too gay</li>
-					<li>Key West is not gay enough</li>
-					<li>Normalize Getting Tipsy at the Jacksonville International Airport Chili's</li>
-					<li>It is too hot</li>
-					<li>Universal Studios taking away the Jaws ride is almost certainly correlated to state-wide increases in depression</li>
-					<li>FSU Football Sucks</li>
-					<li>UF Football Sucks</li>
-					<li>UNF Division II Men's Lacrosse is pretty good</li>
-					<li>It is very hot</li>
-					<li>Publix founder George W. Jenkins could shoot a guy on Blaning Boulevard and I'd still buy his chicken tender subs</li>
-					<li>Cancel anyone and everyone who picks up live sand dollars at the beach</li>
-					<li>It is unbearably hot</li>
-					<li>The housing market is dog****. That isn't an opinion. Don't put it in the opinion section. Are you listening?</li>
-					<li>It is hot</li>
+					<li><a href="#"><img src="images/facebook_logo.png" alt="Facebook logo" title="Facebook logo"></a></li>
+					<li><a href="#"><img src="images/twitter_logo.png" alt="Twitter logo" title="Twitter logo"></a></li>
+					<li><a href="#"><img src="images/instagran_logo.png" alt="Instagram logo" title="Instagram logo"></a></li>
 				</ul>
 
-				<hr class="article_divider article_divider_2 opinion_article_divider">
+				<p>The Skunk Ape Gazette is a work of <span class="amateur">amateur</span> satire created by Ezra Stanley</p>
 
-			</section>
+				<p>Email the Skunk Ape: <a href="mailto:contact@skunkapegazette.com">contact@skunkapegazette.com</a></p>
 
-		<footer class="opinion_footer">
-
-			<hr>
-
-			<ul>
-				<li><a href="#"><img src="images/facebook_logo.png" alt="Facebook logo" title="Facebook logo"></a></li>
-				<li><a href="#"><img src="images/twitter_logo.png" alt="Twitter logo" title="Twitter logo"></a></li>
-				<li><a href="#"><img src="images/instagran_logo.png" alt="Instagram logo" title="Instagram logo"></a></li>
-			</ul>
-
-			<p>The Skunk Ape Gazette is a work of <span class="amateur">amateur</span> satire created by Ezra Stanley</p>
-
-			<p>Email the Skunk Ape: <a href="mailto:contact@skunkapegazette.com">contact@skunkapegazette.com</a></p>
-
-		</footer>
-		</main>
-
-
-
+			</footer>
+			</main>
+		</div>
 
 	<script src="js/hamburger.js"></script>
 	</body>
