fixed errors shown in validator

--- a/opinion.html
+++ b/opinion.html
@@ -82,12 +82,13 @@
 
 					<div class="opinion_container">
 
+						<h4><a href="#">"Drain the Swamp" is Offensive to Alligators</a></h4>
+
 						<figure>
-							<h4><a href="#">"Drain the Swamp" is Offensive to Alligators</a></h4>
 
 							<figcaption class="opinion_author">By an anonymous reptile</figcaption>
 
-							<a href="#"><img class="opinion_image" src="images/alligator.jpg" alt="close up side profile of an alligator's face" title="the reptile in question"></a>
+							<img class="opinion_image" src="images/alligator.jpg" alt="close up side profile of an alligator's face" title="the reptile in question">
 
 						</figure>
 
@@ -96,13 +97,13 @@
 					</div>
 
 					<div class="opinion_container">
+						<h4><a href="#">Stop Being So Needy About Minimum Wage</a></h4>
 
 						<figure>
-							<h4><a href="#">Stop Being So Needy About Minimum Wage</a></h4>
 
 							<figcaption class="opinion_author">By Florida Governor Ron DeSantis</figcaption>
 
-							<a href="#"><img class="opinion_image" src="images/desantis.jpg" alt="image of Florida Governor Ron DeSantis" title="Ron DeSantis, great guy"></a>
+							<img class="opinion_image" src="images/desantis.jpg" alt="image of Florida Governor Ron DeSantis" title="Ron DeSantis, great guy">
 
 						</figure>
 
@@ -112,12 +113,13 @@
 
 					<div class="opinion_container deer_container">
 
+						<h4><a href="#">Hey, We Noticed that Your Vegetable Garden is Looking Pretty Good!</a></h4>
+
 						<figure>
-							<h4><a href="#">Hey, We Noticed that Your Vegetable Garden is Looking Pretty Good!</a></h4>
 
 							<figcaption class="opinion_author">By your neighborhood white-tailed deer</figcaption>
 
-							<a href="#"><img class="opinion_image" src="images/deer.jpg" alt="two young white-tailed deer" title="two hungry deer"></a>
+							<img class="opinion_image" src="images/deer.jpg" alt="two young white-tailed deer" title="two hungry deer">
 
 						</figure>
 
